# ml-abgabe

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
automl_ad/: __init__.py  config.py  data.py  detectors.py  figures.py  hpo.py  internal_metrics.py  llm.py  metrics.py  plots.py  pyod_engine.py  selection.py  ts.py
docs/: erklaerung_3_stufen.md  storyline.md
docs/jd/: 00_narrativ.md  01_baseline_pyod.md  02_konsens.md  03_adengine.md  README.md  adengine_beispiel.py  adengine_plan_beispiel.py  pyod_beispiel.py  slides.md  vortrag_transkript.md
notebooks/: demo.py  jd_praesentation.py
notebooks/__marimo__/session/: demo.py.json  jd_praesentation.py.json
reports/: llm_cache.json
scripts/: make_figures.py  precompute.py  run_experiment.py
tests/: conftest.py  test_data.py  test_detectors.py  test_internal_metrics.py  test_llm.py  test_metrics.py  test_pyod_engine.py  test_selection.py  test_ts.py
